New images to web

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -69,7 +69,7 @@
   {{ content }}
 
   <div id="gallery" data-toggle="modal" data-target="#galleryModal">
-    <h3 class="font-weight-light text-center text-lg-left mt-4 mb-3">See it in action</h1>
+    <h3 class="font-weight-light text-center text-lg-left mt-4 mb-3">See it in action</h3>
       <div class="row text-center text-lg-left">
         <div class="col-lg-3 col-md-4 col-6">
           <a class="d-block mb-4 h-100">
@@ -101,7 +101,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content"> 
             <div class="modal-header" style="max-height: 50px">
-              <button type="button" style="padding: 0 20px 5px 0; margin: 0 left" class="close" data-dismiss="modal" aria-label="Close">
+              <button type="button" style="padding: 0 20px 5px 0; margin: 0" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
