--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: " en-US" }}">
+<html en-US lang="{{ site.lang | default: "" }}">
 <head>
 
     {% if site.google_analytics %}
@@ -19,32 +19,32 @@
 
     {% seo %}
     <title>{{ site.title }} | {{ site.description }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#157878">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="#157878" name="theme-color">
+    <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style">
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.min.css" crossorigin="anonymous">
+    <link crossorigin="anonymous" href="https://bootswatch.com/4/minty/bootstrap.min.css" rel="stylesheet">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    <script crossorigin="anonymous"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script crossorigin="anonymous"
             integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script crossorigin="anonymous"
             integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-            crossorigin="anonymous"></script>
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" rel="stylesheet">
 </head>
 <body>
 
 
-<nav style="max-width: 55rem;margin:0 auto;background-color: white;" class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light" style="max-width: 55rem;margin:0 auto;background-color: white;">
     <a class="navbar-brand" href="#">{{ site.title }}</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03"
-            aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+    <button aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+            data-target="#navbarColor03" data-toggle="collapse" type="button">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -70,78 +70,78 @@
     <h2 class="project-tagline" style="color: white">{{ page.description | default: site.description | default:
         site.github.project_tagline }}</h2>
     {% if site.github.is_project_page %}
-    <a href="{{ site.github.repository_url }}" class="btn btn-outline-primary">View on GitHub</a>
+    <a class="btn btn-outline-primary" href="{{ site.github.repository_url }}">View on GitHub</a>
     {% endif %}
     {% if site.show_downloads %}
-    <a href="{{ site.github.release_url }}" class="btn btn-outline-primary">Download latest release</a>
+    <a class="btn btn-outline-primary" href="{{ site.github.release_url }}">Download latest release</a>
     {% endif %}
 </header>
 
-<main id="content" class="main-content" role="main">
+<main class="main-content" id="content" role="main">
 
     {{ content }}
 
-    <div id="gallery" data-toggle="modal" data-target="#galleryModal">
+    <div data-target="#galleryModal" data-toggle="modal" id="gallery">
         <h3 class="font-weight-light text-center text-lg-left mt-4 mb-3">See it in action</h3>
         <div class="row text-center text-lg-left">
             <div class="col-lg-3 col-md-4 col-6">
                 <a class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" data-target="#carousel" src="images/1.png" alt="Main view"
-                         onclick="$('#p1').addClass('active');$('#p2').removeClass('active');$('#p3').removeClass('active');$('#p4').removeClass('active')">
+                    <img alt="Main view" class="img-fluid img-thumbnail" data-target="#carousel" onclick="$('#p1').addClass('active');$('#p2').removeClass('active');$('#p3').removeClass('active');$('#p4').removeClass('active')"
+                         src="images/1.png">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
                 <a class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" data-target="#carousel" src="images/2.png"
-                         alt="Station history"
-                         onclick="$('#p1').removeClass('active');$('#p2').addClass('active');$('#p3').removeClass('active');$('#p4').removeClass('active')">
+                    <img alt="Station history" class="img-fluid img-thumbnail" data-target="#carousel"
+                         onclick="$('#p1').removeClass('active');$('#p2').addClass('active');$('#p3').removeClass('active');$('#p4').removeClass('active')"
+                         src="images/2.png">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
                 <a class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" data-target="#carousel" src="images/3.png" alt="Search"
-                         onclick="$('#p1').removeClass('active');$('#p2').removeClass('active');$('#p3').addClass('active');$('#p4').removeClass('active')">
+                    <img alt="Search" class="img-fluid img-thumbnail" data-target="#carousel" onclick="$('#p1').removeClass('active');$('#p2').removeClass('active');$('#p3').addClass('active');$('#p4').removeClass('active')"
+                         src="images/3.png">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
                 <a class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" data-target="#carousel" src="images/4.png" alt="Station detail"
-                         onclick="$('#p1').removeClass('active');$('#p2').removeClass('active');$('#p3').removeClass('active');$('#p4').addClass('active')">
+                    <img alt="Station detail" class="img-fluid img-thumbnail" data-target="#carousel" onclick="$('#p1').removeClass('active');$('#p2').removeClass('active');$('#p3').removeClass('active');$('#p4').addClass('active')"
+                         src="images/4.png">
                 </a>
             </div>
         </div>
 
-        <div class="modal fade" id="galleryModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div aria-hidden="true" class="modal fade" id="galleryModal" role="dialog" tabindex="-1">
             <div class="modal-dialog modal-xl" role="document">
                 <div class="modal-content">
                     <div class="modal-header" style="max-height: 50px">
-                        <button type="button" style="padding: 0 20px 5px 0; margin: 0" class="close"
-                                data-dismiss="modal" aria-label="Close">
+                        <button aria-label="Close" class="close" data-dismiss="modal"
+                                style="padding: 0 20px 5px 0; margin: 0" type="button">
                             <span aria-hidden="true">&times;</span> Close gallery
                         </button>
                     </div>
                     <div class="modal-body">
-                        <div id="carousel" class="carousel slide" data-ride="carousel">
+                        <div class="carousel slide" data-ride="carousel" id="carousel">
                             <div class="carousel-inner">
-                                <div id="p1" class="carousel-item">
+                                <div class="carousel-item" id="p1">
                                     <img class="d-block w-100" src="images/1.png">
                                 </div>
-                                <div id="p2" class="carousel-item">
+                                <div class="carousel-item" id="p2">
                                     <img class="d-block w-100" src="images/2.png">
                                 </div>
-                                <div id="p3" class="carousel-item">
+                                <div class="carousel-item" id="p3">
                                     <img class="d-block w-100" src="images/3.png">
                                 </div>
-                                <div id="p4" class="carousel-item">
+                                <div class="carousel-item" id="p4">
                                     <img class="d-block w-100" src="images/4.png">
                                 </div>
                             </div>
-                            <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <a class="carousel-control-prev" data-slide="prev" href="#carousel" role="button">
+                                <span aria-hidden="true" class="carousel-control-prev-icon"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <a class="carousel-control-next" data-slide="next" href="#carousel" role="button">
+                                <span aria-hidden="true" class="carousel-control-next-icon"></span>
                                 <span class="sr-only">Next</span>
                             </a>
                         </div>
